--- a/src/styles.scss
+++ b/src/styles.scss
@@ -71,6 +71,14 @@ body {
     vertical-align: middle;
     border: 1px solid #cee1f0;
 }
+.profileimgmenu {
+  padding: 5px;
+  border-radius: 50%;
+  height: 3vh; 
+  width: 3vh; 
+  vertical-align: middle;
+  border: 1px solid #cee1f0;
+}
 
 .company-logo {
     width: 50px; /* Adjust as needed */
