--- a/src/app/page/loginpage/loginpage.component.html
+++ b/src/app/page/loginpage/loginpage.component.html
@@ -33,9 +33,18 @@
             Login
           </button>
         </div>
+
+        <div class="button-container" style="margin-top: 20px;">
+          <img [src]="va.icon.line" (click)="onLoginLine(registermodal)" class="line-icon" />
+        </div>
       </form>
     </div>
   </div>
   
 </body>
 
+<ng-template #registermodal let-modal>
+  <!-- <app-registerpage></app-registerpage> -->
+  <app-registerpage [modal]="modal" [linedata]="linedata"  (talk)="registerback($event)"></app-registerpage>
+  <!-- <app-companymappage [modal]="modal" [editcompany]="activecompany" (talk)="companytalkback($event)"></app-companymappage> -->
+</ng-template>
