--- a/src/app/page/loginpage/loginpage.component.scss
+++ b/src/app/page/loginpage/loginpage.component.scss
@@ -31,3 +31,13 @@ body {
   text-align: center;
 }
 
+.line-icon {
+  height: 3vh;
+  transition: transform 0.3s ease, filter 0.3s ease; /* Smooth animation */
+}
+
+.line-icon:hover {
+  transform: scale(1.1); /* Slightly enlarge the image */
+  filter: brightness(1.2); /* Brighten the image */
+  cursor: pointer; /* Change cursor to pointer on hover */
+}
