--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,17 +2,17 @@
 
     <mat-sidenav mode="over" [(opened)]="menuopen" style="background-color: #1e88e5;">
       <mat-toolbar style="background-color: #1976d2;" >
-        <img class="profileimgmenu" [src]="(UserProfile&&UserProfile.userimage!='')?UserProfile.userimage:va.icon.user"/>        
+        <img class="profileimgmenu" [src]="(va.UserProfile&&va.UserProfile.userimage!='')?va.UserProfile.userimage:va.icon.user"/>        
         <div style="display: flex; flex-direction: column; justify-content: center;">
-            <div class="empname" style="margin-left: 10px; font-size: medium ;">{{UserProfile?UserProfile.empname:''}} </div>
-            <div style="margin-left: 10px; font-size: small;"> {{UserProfile?UserProfile.rolename:''}} </div>
+            <div class="empname" style="margin-left: 10px; font-size: medium ;">{{va.UserProfile?va.UserProfile.empname:''}} </div>
+            <div style="margin-left: 10px; font-size: small;"> {{va.UserProfile?va.UserProfile.rolename:''}} </div>
         </div>   
 <!--         
         <span style="width: 80%; padding: 10px; color: white;"> {{UserProfile?UserProfile.empname:''}}</span> -->
         <mat-icon (click)="menuopen=false" style="cursor: pointer; color: white; display: flex; justify-content: flex-end;">navigate_before</mat-icon>
       </mat-toolbar>
 
-      <div class="container">
+      <div class="container"> 
         <div *ngIf="true" (click)="openPage('maindashboard')"  class="clickable-div">
             <mat-icon style="margin-right: 20px; color: #b3e5fc;">menu</mat-icon>
             <span class="menu-item"> Dashboard </span>
@@ -135,8 +135,8 @@
       <mat-toolbar class="navbar" style="background-color:#1976d2;" *ngIf="va.token!=''">
         <div class="d-flex flex-wrap align-items-center" style="gap:10px;">
             <mat-icon class="navmenu" (click)="menuopen=true" style="color: #b3e5fc;">menu</mat-icon>
-            <img class="profileimgmenu" [src]="(UserProfile&&UserProfile.userimage!='')?UserProfile.userimage:va.icon.user"/>              
-            <span style="color: #8fbeed; font-size: medium;">{{UserProfile?.empname}}</span>
+            <img class="profileimgmenu" [src]="(va.UserProfile&&va.UserProfile.userimage!='')?va.UserProfile.userimage:va.icon.user"/>              
+            <span style="color: #8fbeed; font-size: medium;">{{va.UserProfile?.empname}}</span>
         </div>
   
         <div class="d-flex flex-wrap align-items-center" style="gap: 10px;" >
