--- a/src/app/page/loginpage/loginpage.component.html
+++ b/src/app/page/loginpage/loginpage.component.html
@@ -28,7 +28,7 @@
           </button>
         </mat-form-field>
   
-        <div class="button-container">
+        <div class="button-container" *ngIf="false">
           <button mat-raised-button color="primary" type="submit" (click)="onLoginClkick()">
             Login
           </button>
