--- a/src/app/page/loginpage/loginpage.component.html
+++ b/src/app/page/loginpage/loginpage.component.html
@@ -11,7 +11,7 @@
 <body style=" z-index: 0; position:static;">
 
   <div class="container">
-    <div class="frame">
+    <div class="frame" *ngIf="false">
       <form>
         <mat-form-field class="full-width">
           <mat-label>Login</mat-label>
@@ -35,16 +35,17 @@
         </div>
 
         <div class="button-container" style="margin-top: 20px;">
-          <img [src]="va.icon.line" (click)="onLoginLine(registermodal)" class="line-icon" />
+          <!-- <img [src]="va.icon.line" (click)="onLoginLine(registermodal)" class="line-icon" /> -->
+          <img [src]="va.icon.line" (click)="openloginline()" class="line-icon" />
         </div>
       </form>
+    </div>
+    <div style="margin-top: 20px;">
+      <!-- <img [src]="va.icon.line" (click)="onLoginLine(registermodal)" class="line-icon" /> -->
+      <img [src]="va.icon.line" (click)="openloginline()" class="line-icon" />
     </div>
   </div>
   
 </body>
 
-<ng-template #registermodal let-modal>
-  <!-- <app-registerpage></app-registerpage> -->
-  <app-registerpage [modal]="modal" [linedata]="linedata"  (talk)="registerback($event)"></app-registerpage>
-  <!-- <app-companymappage [modal]="modal" [editcompany]="activecompany" (talk)="companytalkback($event)"></app-companymappage> -->
-</ng-template>
+
