--- a/src/app/page/Company/companyprofilepage/companyprofilepage.component.html
+++ b/src/app/page/Company/companyprofilepage/companyprofilepage.component.html
@@ -77,7 +77,7 @@
           </div>
 
           <div class="row">
-            <div class="col-3" style="text-align: right;" (dblclick)="getGoogleAddress()"><mat-icon matPrefix>home</mat-icon></div>
+            <div class="col-3" style="text-align: right;"><mat-icon matPrefix>home</mat-icon></div>
             <div class="col-9">
               <!-- <input [(ngModel)]="activecompany.address" type="tel" placeholder="Company Address" style="width: 100%;" > -->
               <textarea  [(ngModel)]="activecompany.address"  placeholder="Company Address" 
