--- a/src/app/page/loginpage/loginpage.component.html
+++ b/src/app/page/loginpage/loginpage.component.html
@@ -28,14 +28,15 @@
           </button>
         </mat-form-field>
   
-        <div class="button-container">
-          <button mat-raised-button color="primary" type="submit" (click)="onLoginClkick()">
+        <div class="button-container" >
+          <img [src]="va.icon.line" class="line-miniicon"  (click)="openloginline()" />
+          <button mat-raised-button color="primary" type="submit" class="line-miniicon"  (click)="onLoginClkick()">
             Login
           </button>
         </div>
 
-        <div style="margin-top: 20px;" *ngIf="false">
-          <img [src]="va.icon.line" (click)="openloginline()" class="line-icon" />
+        <div style="margin-top: 20px;">
+          
         </div>
 
       </form>
