--- a/src/app/page/Plan/plandatapage/plandatapage.component.html
+++ b/src/app/page/Plan/plandatapage/plandatapage.component.html
@@ -209,7 +209,7 @@
     </div>
     <hr />
 
-    <div class="row" matTooltip="เวลาที่ควรถึงปลายทาง">
+    <div class="row" matTooltip="เวลาที่ควรถึงปลายทาง" *ngIf="activeplan.issend==0">
       <div class="col-1" style=" align-items: center;">
         <mat-icon>flag</mat-icon>
       </div>
